feat: add unit test and optimize code
Signed-off-by: SuZhou-Joe <suzhou@amazon.com>